* Bug Fix: Fix missing `dropdown.svg` asset.
* Change: Rename `table` -> `collection` throughout the engine.
  * API for dashboard classes now relies on `COLLECTION_ATTRIBUTES` constant
  * Generated views now use the `_collection` partial instead of `_table`
* Bug Fix: Fix asset precompilation issue for `datetime_picker_rails` gem.
* Improvement: Add a generator for copying field views to host application
* Improvement: Generated dashboards are more explicit,
  and more clearly define the API.
* Improvement: Add a generator for creating custom field types
* Documentation: Update README with a better description of the repo.
* Improvement: Add generators for copying view templates into host application
* UI: Give form and show pages more consistent label styles
* Documentation: Add comments to all template files
  describing what variables will be available
* Bug Fix: Remove erroneous "Showing 5 of 1" messages
  from has_many relationships on the `show` page.
* Improvement: Add sensible dynamic titles to the dashboard pages.
* Improvement: Add text field type.
* UI: Fix checkbox styling and label alignment.
* UI: Fix scrollbar issues on list pages.

New in 0.0.12:

* Improvement: Implement searching over string and email attributes
* Improvement: Add pagination to index views
  * Customizable by overriding `Admin::ApplicationController#records_per_page`
  * Customizable through HTTP param `per_page`
* Imprrovement: Add sorting by column
  * Clicking on the column header multiple times changes sort direction
* Improvement: Generate resource-specific controller subclasses.
* Improvement: Add a `limit` option to `Administrate::Field::HasMany`,
  with a default of 5.
  This option limits the number of items shown in the relationship table.
* UI: Remove logo from the sidebar
* UI: Fix alignment issue with string fields on show pages
* Bug Fix: Fix a bug where `nil` in a string field would cause a 500 error.